--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,35 +124,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <EditText
-        android:id="@+id/initialVal"
+    <Spinner
+        android:id="@+id/leftSpinner"
         android:layout_width="350dp"
         android:layout_height="100dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="80dp"
-        android:ems="10"
-        android:inputType="number"
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
-    <EditText
-        android:id="@+id/finalVal"
+    <Spinner
+        android:id="@+id/rightSpinner"
         android:layout_width="350dp"
         android:layout_height="100dp"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:inputType="number"
+        android:layout_marginTop="60dp"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="350dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buStart" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
