--- a/app/src/main/res/layout/activity_calc_page.xml
+++ b/app/src/main/res/layout/activity_calc_page.xml
@@ -102,17 +102,7 @@
     </LinearLayout>
 
     <!--○×表示用-->
-    <TextView
-        android:id="@+id/trueOrFalse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="500dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+    <!--Z軸の指定-->
 
     <Button
         android:id="@+id/bu1"
