--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -8,11 +8,32 @@
 
     <TextView
         android:id="@+id/testText"
-        android:layout_width="611dp"
-        android:layout_height="356dp"
-        android:textSize="34sp"
+        android:layout_width="265dp"
+        android:layout_height="162dp"
+        android:text="test1"
+        android:textSize="96sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="187dp"
+        android:layout_height="91dp"
+        android:text="Button"
+        app:layout_constraintBottom_toTopOf="@+id/testText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="182dp"
+        android:layout_height="110dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/testText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
