--- a/app/src/main/res/layout/activity_calc_page.xml
+++ b/app/src/main/res/layout/activity_calc_page.xml
@@ -268,6 +268,19 @@
         app:layout_constraintTop_toBottomOf="@+id/bu7"
         app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/textJudge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="1dp"
+        android:text=""
+        android:textSize="700dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.52" />
+
     <!--ライン-->
 
 
