--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#CD8888</color>
-    <color name="blue">#3F51B5</color>
+    <color name="red">#FFFF0000</color>
+    <color name="blue">#FF3F51B5</color>
 </resources>
